# diot

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .tagitrc  404.html  Makefile  README.md  README.rst  diot.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: build.yml  docs.yml
CHANGELOG/: index.html
api/diot/: index.html
api/diot.diot/: index.html
api/diot.transforms/: index.html
api/diot.utils/: index.html
api/source/diot/: index.html
api/source/diot.diot/: index.html
api/source/diot.transforms/: index.html
api/source/diot.utils/: index.html
diot/: __init__.py  diot.py  transforms.py  utils.py
docs/: CHANGELOG.md  changeLog.md  commands.md  fromCommandline.md  fromDict.md  helpPage.md  requirements.txt  shellCompletions.md  useTheValues.md
examples/: arbitrary.py  autotype.py  basic.py  callback_check.py  callback_modify.py  fixedPrefix.py  fromDict.py  fromFile.py  helpPage.py  listoflist.py  options.ini  optionsFromDict.py  pooled.py  positional.py  pyparam-completions.py  subcommands.py
pyparam/: __init__.py  help.py  utils.py
search/: search_index.json
tests/: test_box.py  test_diot.py  test_help.py  test_pyparam.py
