[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diot"
version = "0.3.3"
description = "Python dictionary with dot notation."
authors = [{ name = "pwwang", email = "pwwang@pwwang.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "inflection>=0.5",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6"]
# Use rtoml only when the wheel is available (linux)
toml = [
    "rtoml>=0.12; sys_platform == 'linux'",
    "tomli>=2.0; sys_platform != 'linux'",
]
all = [
    "pyyaml>=6",
    "rtoml>=0.12; sys_platform == 'linux'",
    "tomli>=2.0; sys_platform != 'linux'",
]

[project.urls]
Homepage = "https://github.com/pwwang/diot"
Repository = "https://github.com/pwwang/diot"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8",
    "pytest-cov>=6",
]

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr"]
show_error_codes = true
strict_optional = false

[tool.pytest.ini_options]
addopts = "-vv --cov-config=.coveragerc --cov=diot --cov-report xml:.coverage.xml --cov-report term-missing"
filterwarnings = [
    #"error"
]
console_output_style = "progress"
junit_family = "xunit1"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
